--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
    
     <div class="header">
-
+        <a href="index.html">Home</a>
+        <a href="review.html">Reviews</a>
+        <a href="recommending.html">Recommendations</a>
+        <h1>Horror Movie R & R</h1>
     </div>
 
     <div class="main">
