--- a/contact.html
+++ b/contact.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reviews</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="styles.css">
-    
 </head>
 <body>
     <a href="index.html">Home</a>
     <a href="review.html">Reviews</a>
     <a href="recommending.html">Recommendations</a>
     <a href="contact.html">Contact</a>
-    <h2>Horror Movie Reviews</h2>
+
+    <h4>Contact</h4>
+    
 </body>
 </html>
