--- a/recommending.html
+++ b/recommending.html
@@ -10,6 +10,7 @@
     <a href="index.html">Home</a>
     <a href="review.html">Reviews</a>
     <a href="recommending.html">Recommendations</a>
+    <a href="contact.html">Contact</a>
     <h3>Horror Movie Recommendations</h3>
 </body>
 </html>
