--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <a href="index.html">Home</a>
         <a href="review.html">Reviews</a>
         <a href="recommending.html">Recommendations</a>
+        <a href="contact.html">Contact</a>
         <h1>Horror Movie R & R</h1>
     </div>
 
