--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,8 @@
     <a href="contact.html">Contact</a>
 
     <h4>Contact</h4>
-    
+    <h5>Dm if I didn't mention one you were hoping for, and you want an opinion of a horror movie before you watch.</h5>
+    <h6>Email:</h6>
+    <h6>Phone number:</h6>
 </body>
 </html>
