--- a/recommending.html
+++ b/recommending.html
@@ -12,5 +12,59 @@
     <a href="recommending.html">Recommendations</a>
     <a href="contact.html">Contact</a>
     <h3>Horror Movie Recommendations</h3>
+    <h5>The Black Phone 1</h5>
+    <p>
+        The Black Phone is about a shy 13-year old boy named Finney that is kidnapped by a masked man called The Grabber. 
+        He's locked in a basement with a disconnected black phone that mysteriously startes ringing. 
+        Each call is from one of the Grabber's previous victims, and they give Finney advice and clues to help him escape. 
+        Meanwhile, Finney's sister Gwen has strange dreams that help police search for him. 
+        The story follows Finney using courage, the phone's messages, and his own instincts to outsmart the kidnapper and get free.
+    </p>
+    
+    <h5>The Black Phone 2</h5>
+    <p>
+        The sequel continues after Finney's escape. He's trying to move on with his life, but the past keeps affecting him. 
+        When strange events start happening again, Finney and Gwen realize that the supernatural black phone still has unfinished business. 
+        New calls, new warnings, and a new mystery pull them back into danger as they try to stop someone connected to the original kidnapper.
+        The story focuses on healing, fear, and facing what still haunts them.
+    </p>
+    <h5>Amityville: The Awakening</h5>
+    
+    <h5>Until dawn</h5>
+    <p>
+        Until dawn is about a girl named clover and her friends go to investigate where her sister vanished, they end up in a remote, creepy valley. 
+        Suddenly they get trapped in a time loop: each night, a killer stalks them and they die, but the next night resets with new horrors.
+        They don't remember past loops, so everytime feels fresh and they must survive until sunrise or keep repeating the nightmare. 
+        It's full of horror, mystery, and scary surprises.
+    </p>
+    <h5>The visit</h5>
+    <p>The visit is about two kids visit their grandparents, but things are super weird and creepy. 
+        They start noticing strange, scary behavior, and they have to figure out what's really going on before it's too late.
+    </p>
+    <h5>Before I wake</h5>
+    <p>
+        Before I wake is about a foster kid's dreams and nightmares come to life while he sleeps. 
+        His new parents try to protect him, but the nightmares get scary and dangerous.
+    </p>
+    <h5>Forgotten</h5>
+    <p>
+        Forgotten is about a man that wakes up one day and realizes his brother is missing, and nobody remembers him. 
+        He starts discovering a terrifying mystery that threatens his life.
+    </p>
+    <h5>Night swim</h5>
+    <p>
+        Night swim is about a family moves into a house with a big pool, and strange, supernatural things start happening at night in the water.
+         Dark secrets from the past come back to haunt them.
+    </p>
+    <h5>Tarot</h5>
+    <p>
+        Tarot is about a group of friends that plays with a mysterious tarot card game, and it turns deadly. 
+        Each card predicts scary things that start happening for real.
+    </p>
+    <h5>Hereditary</h5>
+    <p>
+        Herediary is about a family that starts experiencing weird, scary events after their grandmother dies. 
+        Secrets about their family's past and dark forces come out, and things get terrifying fast.
+    </p>
 </body>
 </html>
