--- a/recommending.html
+++ b/recommending.html
@@ -20,7 +20,7 @@
         Meanwhile, Finney's sister Gwen has strange dreams that help police search for him. 
         The story follows Finney using courage, the phone's messages, and his own instincts to outsmart the kidnapper and get free.
     </p>
-    
+    <img src="blackphone1.jpeg">
     <h5>The Black Phone 2</h5>
     <p>
         The sequel continues after Finney's escape. He's trying to move on with his life, but the past keeps affecting him. 
@@ -28,6 +28,7 @@
         New calls, new warnings, and a new mystery pull them back into danger as they try to stop someone connected to the original kidnapper.
         The story focuses on healing, fear, and facing what still haunts them.
     </p>
+    <img src="blackphone2.webp">
     <h5>Amityville: The Awakening</h5>
     
     <h5>Until dawn</h5>
@@ -37,34 +38,35 @@
         They don't remember past loops, so everytime feels fresh and they must survive until sunrise or keep repeating the nightmare. 
         It's full of horror, mystery, and scary surprises.
     </p>
+    <img src="untildawn.jpeg">
     <h5>The visit</h5>
     <p>The visit is about two kids visit their grandparents, but things are super weird and creepy. 
         They start noticing strange, scary behavior, and they have to figure out what's really going on before it's too late.
     </p>
+    <img src="thevisit.jpeg">
     <h5>Before I wake</h5>
     <p>
         Before I wake is about a foster kid's dreams and nightmares come to life while he sleeps. 
         His new parents try to protect him, but the nightmares get scary and dangerous.
     </p>
+    <img src="beforeiwake.jpeg">
     <h5>Forgotten</h5>
     <p>
         Forgotten is about a man that wakes up one day and realizes his brother is missing, and nobody remembers him. 
         He starts discovering a terrifying mystery that threatens his life.
     </p>
-    <h5>Night swim</h5>
-    <p>
-        Night swim is about a family moves into a house with a big pool, and strange, supernatural things start happening at night in the water.
-         Dark secrets from the past come back to haunt them.
-    </p>
+    <img src="forgotten.jpeg">
     <h5>Tarot</h5>
     <p>
         Tarot is about a group of friends that plays with a mysterious tarot card game, and it turns deadly. 
         Each card predicts scary things that start happening for real.
     </p>
+    <img src="tarot.jpeg">
     <h5>Hereditary</h5>
     <p>
         Herediary is about a family that starts experiencing weird, scary events after their grandmother dies. 
         Secrets about their family's past and dark forces come out, and things get terrifying fast.
     </p>
+    <img src="">
 </body>
 </html>
