--- a/recommending.html
+++ b/recommending.html
@@ -30,7 +30,11 @@
     </p>
     <img src="blackphone2.webp">
     <h5>Amityville: The Awakening</h5>
-    
+    <p>Amityville: The Awakening is about a teenage girl named Belle that moves into a creepy house with her mom and siblings, including her sick brother, James. 
+        James is bedridden and connected to the house in mysterious ways, the evil haunting seems to target him the most, and strange, terrifying events often happen around him. 
+        Belle has to uncover the house's dark secrets and protect her brother while trying to survive the supernatural dangers.
+    </p>
+    <img src="amityville.jpeg">
     <h5>Until dawn</h5>
     <p>
         Until dawn is about a girl named clover and her friends go to investigate where her sister vanished, they end up in a remote, creepy valley. 
@@ -40,21 +44,34 @@
     </p>
     <img src="untildawn.jpeg">
     <h5>The visit</h5>
-    <p>The visit is about two kids visit their grandparents, but things are super weird and creepy. 
-        They start noticing strange, scary behavior, and they have to figure out what's really going on before it's too late.
+    <p>
+        The visit is about two siblings who go to stay with their estranged grandparents for a week, hoping to reconnect with their mom's side of the family. 
+        At first everything seems normal, but the grandparents soon start acting strange, wandering around at night, doing unsettling things, and refusing to answer questions about their past. 
+        As the kids record the trip on camera, they discover clues that something is very wrong in the house. 
+        The visit turns into a fight for safety as they uncover the truth about who they're really staying with.
     </p>
     <img src="thevisit.jpeg">
     <h5>Before I wake</h5>
     <p>
-        Before I wake is about a foster kid's dreams and nightmares come to life while he sleeps. 
-        His new parents try to protect him, but the nightmares get scary and dangerous.
+       Before I wake is about a young boy named Cody whose dreams and nightmares come to life while he sleeps. 
+       When he has a happy dreams, beautiful things appear in the real world, but when he gets scared, a dark, mysterious creature connected to his past shows up and causes dangerous events.
+       His new foster parents, who are grieving the loss of their own child, first see Cody's gift as a miracle but soon realize it's also a threat they don't understand. 
+       As they dig into Cody's past to uncover the truth behind his nightmares, they have to find a way to protect him while also helping him face the fear that has been haunting him his whole life.
     </p>
     <img src="beforeiwake.jpeg">
+    <h5>Come Play</h5>
+    <p>Come Play is about a boy named Oliver, a lonely non-verbal boy who communicates through his tablet, which becomes the doorway for a creature named Larry to reach him. 
+        Larry appears through a digital storybook that shows up on Oliver's device, and each time someone reads it, Larry grows stronger and starts affecting the real world. 
+        As strange events escalate, lights flickering, objects moving, and Larry appearing outside of screens, Oliver's parents realize their son is being targeted by something supernatural that wants to take him away and make him its "friend". 
+        To save him, the family must finally come together, ending with a heartbreaking sacrifice to protect him from Larry once and for all.
+    </p>
+    <img src="comeplay.jpeg">
     <h5>Forgotten</h5>
     <p>
-        Forgotten is about a man that wakes up one day and realizes his brother is missing, and nobody remembers him. 
-        He starts discovering a terrifying mystery that threatens his life.
-    </p>
+        Forgotten is about a college student named Jin-seok, who becomes obsessed with finding out what happened when his older brother Yoo-seok is suddenly kidnapped and then returns home acting completely different. 
+        Yoo-seok's strange behavior, like not recognizing things, sneaking around at night, and hiding secrets makes Jin-seok question everything he knows about his family. 
+        As Jin-seok investigates, he starts uncovering clues that don't add up and realizes that his own memories might not be real. 
+        The truth behind the kidnapping leads to a huge twist that forces Jin-seok to confront hidden lies, buried trauma,and a past he didn't know he had.</p>
     <img src="forgotten.jpeg">
     <h5>Tarot</h5>
     <p>
@@ -67,6 +84,6 @@
         Herediary is about a family that starts experiencing weird, scary events after their grandmother dies. 
         Secrets about their family's past and dark forces come out, and things get terrifying fast.
     </p>
-    <img src="">
+    <img src="hereditary.jpeg">
 </body>
 </html>
