--- a/recommending.html
+++ b/recommending.html
@@ -35,6 +35,14 @@
         Belle has to uncover the house's dark secrets and protect her brother while trying to survive the supernatural dangers.
     </p>
     <img src="amityville.jpeg">
+    <h5>The Call</h5>
+    <p>
+        A woman named Seo-yeon who finds an old cordless phone in her childhood home and unexpectedly connects with another woman, Young-sook, who is living in the same house but 20 years in the past. 
+        At first, the two become friends and help each other by changing events through time, but things turn dark when Young-sook's life takes a violent path. 
+        Every time she alters the past, Seo-yeon's present changes in scary and dangerous ways. 
+        The movie becomes a tense battle across time with Seo-young trying to survive as young-sook uses the past to control and threaten her future.
+    </p>
+    <img src="thecallpic1.jpeg">
     <h5>Until dawn</h5>
     <p>
         Until dawn is about a girl named clover and her friends go to investigate where her sister vanished, they end up in a remote, creepy valley. 
@@ -75,14 +83,18 @@
     <img src="forgotten.jpeg">
     <h5>Tarot</h5>
     <p>
-        Tarot is about a group of friends that plays with a mysterious tarot card game, and it turns deadly. 
-        Each card predicts scary things that start happening for real.
+        Tarot is about a group of friends who use a mysterious deck of tarot cards during a party, not realizing the deck is cursed. 
+        Each card they draw predicts a terrifying event connected to a supernatural force tied to the deck's past. 
+        As their fortunes start coming true, the friend's realize they're being hunted one by one by the creatures represented im the cards. 
+        They try to uncover the deck's origin and break the curse, but the more they investigate, the more they realize that fate might already be sealed.
     </p>
     <img src="tarot.jpeg">
     <h5>Hereditary</h5>
     <p>
-        Herediary is about a family that starts experiencing weird, scary events after their grandmother dies. 
-        Secrets about their family's past and dark forces come out, and things get terrifying fast.
+        Herediary is about the Graham family, Annie, her husband, and their two kids whose lives start to fall apart after Annie's secretive mother dies. 
+        Strange things begin happening around their home, and the family slowly realizes that the grandmother was involved in a dangerous cult that left behind a dark influence targeting the family. 
+        As eerie events escalate, Annie uncovers horrifying truths about her family's past, the cult's plans, and why her children seem to be at the center of everything. 
+        The movie becomes a story about grief, family trauma, and how the choices of previous generations can create consquences no one expected.
     </p>
     <img src="hereditary.jpeg">
 </body>
